Fixing the look on mobile devices

--- a/themes/skeleton/static/css/main.css
+++ b/themes/skeleton/static/css/main.css
@@ -295,7 +295,7 @@ a.fork-github {
 p.tech-stack {
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.0rem;
   margin-bottom: 0.8rem;
   color: white;
   font-weight: 600;
@@ -304,7 +304,7 @@ p.tech-stack {
 p.tech-stack span.tag {
   background-color: #5a6e79;
   margin-right: 10px;
-  padding: 4px 8px;
+  padding: 4px 4px;
   border-radius: 4px;
 }
 
@@ -420,6 +420,17 @@ code {
 
   h1.post-title {
     margin-bottom: 2rem;
+  }
+
+  p.tech-stack {
+      font-size: 1.2rem;
+      margin-bottom: 0.8rem;
+      font-weight: 600;
+  }
+
+  p.tech-stack span.tag {
+      margin-right: 10px;
+      padding: 4px 8px;
   }
 
 }
